another temp init

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,34 @@
 @tailwind base;
+
+/* Firefox */
+* {
+  scrollbar-width: 12px;
+  scrollbar-color: var(--secondary) var(--primary);
+  scrollbar-track-color: var(--primary);
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--primary);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--secondary);
+  border-radius: 14px;
+  border: 3px solid var(--primary);
+}
+
 @tailwind components;
 @tailwind utilities;
 
 :root {
+  --primary: #1a202c;
+  --secondary: #e2e8f0;
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -10,6 +36,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --primary: #2d3748;
+    --secondary: #1a202c;
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
